fixed googlePlay  logo view on iOs and button ruleta (.sticky-item)

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ body {
 
 .apps a:nth-child(2) img {
   height: 4.5rem !important;
-  width: fit-content !important;
+  width: auto !important;
 }
 .mobileViewAppLogos {
   align-items: center;
@@ -1492,7 +1492,7 @@ footer.nb-footer .footer-info-single p {
 
   .sticky-item {
     display: inline-block;
-    font-size: 4.4vw;
+    font-size: 4vw;
     padding: 2vw 0.5vw 2vw 0.5vw;
     box-shadow: none;
     text-decoration: none;
